white space issue solved

--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,36 @@ body,
 
 
 
-/* Adjustment for mobile devices*/
-@media (max-width: 776px) {
-  .carousel {
-    height: 100%; } }
-
 /* Navbar animation */
 .navbar {
   background-color: rgba(0, 0, 0, 0); }
 
 .top-nav-collapse {
-  background-color: #4EB9E9;
+  background-color: #4EB9E9 !important;
 }
 
 /* Adding color to the Navbar on mobile */
 @media only screen and (max-width: 768px) {
   .navbar {
     background-color:  #4EB9E9;
-  } }
+  } 
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+  }
+
+}
 
 /* Footer color for sake of consistency with Navbar */
 .page-footer {
   background-color: #4EB9E9}
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+  }
